--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -268,21 +268,21 @@
     </div>
     <div class="row">
         <div style="margin-top:5px;" class="element1 col-md-6">
-            <button class="ui button" id="buttonVideoPause">PAUSE Video</button>
+            <button class="btn btn-info" id="buttonVideoPause">PAUSE Video</button>
             <div class="ui input focus">
                 <input type="text" id="resumetime">
             </div>
-            <button class="ui button" id="buttonVideoResume">RESUME Video</button>
+            <button class="btn btn-info" id="buttonVideoResume">RESUME Video</button>
         </div>
         <div class="element1 col-md-6">
-            <button style="margin-top:5px;" class="ui button" id="buttonSeeAnswers">See Answers</button>
+            <button style="margin-top:5px;" class="btn btn-info" id="buttonSeeAnswers">See Answers</button>
         </div>
     </div>
     
     
     
     </br>
-    <button class="ui button" id="buttonNewQuestion">New Question</button>
+    <button class="btn btn-info" id="buttonNewQuestion">New Question</button>
     <div id="newQ" style="display:none">
         <h3>Add a new Question</h3>
         <div class="ui input">
@@ -291,7 +291,7 @@
         <div class="ui input">
             <input type="text" placeholder="Question" id="newQuestion">
         </div>
-        <button class="ui button" id="buttonAddQuestion">Add new Question</button>
+        <button class="btn btn-info" id="buttonAddQuestion">Add new Question</button>
     </div>
     <div id="ListA" style="display:none">
         <h3 id="info1"></h3>
@@ -313,10 +313,10 @@
             <textarea cols="50" type="text" placeholder="Answer" id="newAnswer" placeholder="Add answer"></textarea>
             
         </div>
-        <button class="ui button" id="buttonAddAnswer">Add new Answer</button>
+        <button class="btn btn-info" id="buttonAddAnswer">Add new Answer</button>
     </div>
     <div>
-        <button style="margin-top:25px;" class="ui button" id="buttonGoBack">Back</button>
+        <button style="margin-top:25px;" class="btn btn-secondary" id="buttonGoBack">Back</button>
     </div> 
 </body>
 
