--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -218,7 +218,7 @@
                         console.log("cabeçalho")
                         console.log(question_id);
                         console.log(data)
-                        document.getElementById("info1").innerHTML = 'Question: ' + info["question"] + ' Time: ' + info["time"];
+                        document.getElementById("info1").innerHTML = 'Time: ' + info["time"] + ' Question: ' + info["question"];
                         document.getElementById("info2").innerHTML = 'User: ' + info["user"] + ' ' + info["name"];
                     }
                 })
