--- a/proxy/templates/stats.html
+++ b/proxy/templates/stats.html
@@ -33,7 +33,7 @@
                 success: function(data) {
                     console.log(data);
                     $('#statsTable > tbody:last-child').empty()
-                    data["Stats"].forEach(s => {
+                    data["Users"].forEach(s => {
                         $('#statsTable > tbody:last-child').
                         append('<tr> <td>' + s["user"] + '</td><td>' + s["views"] + '</td><td>' + s["questions"] + ' </td><td>' + s["answers"] + ' </td><td>' + s["videos_reg"] + '</td></tr>');
                     });
