--- a/proxy/templates/videoListing.html
+++ b/proxy/templates/videoListing.html
@@ -66,6 +66,7 @@
             // TODO 4 - create an object (requestData) that contains the url and descrition
             // look at the server to understand what data should be sent.
             let requestData = {
+                "user": id,
                 "description": description,
                 'url': url
             }
