--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -40,7 +40,7 @@
             // TODO 4 - create an object (requestData) that contains the url and descrition
             // look at the server to understand what data should be sent.
             let requestData = {
-                "v_id": id,
+                "video_id": id,
                 "user": user,
                 "name": name,
                 "time": time,
